lesson_13/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');

@import url("reset.css");

body {
	font-family: "Inter", sans-serif;
	color:#000;
	background-color: #fff;
}
.wrapper {
	overflow: clip;
	min-height: 100%;
	display: flex;
	flex-direction: column;
}

.wrapper > main {
	flex-grow: 1;
}

[class*="__container"] {
	max-width: 1231px;
	margin: 0 auto;
	padding-left: 15px;
	padding-right: 15px;
}
[class*="--mb"] {
	margin-bottom: 50px;
}

[class*="--ptb"] {
	padding: 20px 0;
}

.header__container {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	column-gap: 100px;
	row-gap: 20px;
}

.header__logo {
	font-size: 28px;
	font-weight: 700;
}

.header__description {
	font-size: 20px;
}

.page {}

.professional {
	background-color: #412672;
	padding: 60px 0 100px;
}

.professional__container {
	display: flex;
	flex-direction: column;
	gap: 30px;
}

.professional__head-title {
	display: flex;
	flex-direction: column;
	font-size: 38px;
	line-height: 1.1;
	color: #fff;
}

.professional__head-title > span {
	font-weight: 700;
	color: #fff;
}

.professional__row {
	display: flex;
	flex-wrap: wrap;
	gap: 20px;
	justify-content: center;
}

.professional__item	{
	flex-grow: 0;
	flex-shrink: 1;
	flex-basis: 387px;
	padding: 20px;
	display: flex;
	gap: 16px;
	flex-direction: column;
	background-color: #fff;
	box-shadow: 0px 384px 108px 0px rgba(0, 0, 0, 0.00), 0px 246px 98px 0px rgba(0, 0, 0, 0.01), 0px 138px 83px 0px rgba(0, 0, 0, 0.05), 0px 62px 62px 0px rgba(0, 0, 0, 0.09), 0px 15px 34px 0px rgba(0, 0, 0, 0.10);
	transition: background-color 0.3s ease-in-out;
}

.professional__item:hover {
	background-color: #ffbe48;
}

.professional__img-container {}

.professional__image {}

.professional__title {
	font-size: 22px;
	font-weight: 600;
	color: #000;
}

.professional__text {
	flex-grow: 1;
}

.professional__text > p {
	font-size: 15px;
	line-height: 1.27;
	color: #4f4f4f;
}

.professional__link {
	display: inline-flex;
	align-self: flex-start;
	font-size: 15px;
	color: #fe3f3f;
	transition: color 0.3s ease;
}

.professional__link:hover {
	color:#d82f2f;
	text-decoration: underline;
}

/* Learning */

.learning {
	padding: 55px 0;
}

.learning__container {}

.learning__block {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 90px;
}

.learning__text {
	display: flex;
	flex-direction: column;
	flex: 1 0 518px;
	gap: 20px;
	justify-content: center;
}

.learning__title {
	display: flex;
	flex-direction: column;
	font-size: 34px;
	line-height: 1.1;
	color: #412672;
}

.learning__title > span {
	font-weight: 700;
}

.learning__subtitle {
	font-size: 22px;
	color: #412672;
	line-height: 1.1;
}

.learning__list {
	display:flex;
	gap: 20px;
	flex-direction: column;
}

.learning__item {
	display: inline-flex;
	align-items: center;
	font-size: 20px;
	color: #4f4f4f;
	gap: 15px;
	line-height: 1.2;
}

.learning__item::before {
	content: "";
	align-self: flex-start;
	background: url("../img/icon.svg") 0 0 / 100% no-repeat;
	width: 30px;
	height: 30px;
	flex-shrink: 0;
	flex-grow: 0;
}

.learning__image-container {
	flex-basis: 764px;
	margin-right: -171px;
}

.advantages {
	padding: 70px 0;
	background-color: #412672;
}

.advantages__container {}

.advantages__flex {
	display: flex;
	flex-direction: column;
	gap: 30px;
}

.advantages__title {
	align-self: center;
	font-size: 24px;
	color: #fff;
}

.advantages__title > span {
	font-weight: 700;
}

.advantages__list {} 

.list {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: 20px;
}

.list__item {
	display: flex;
	flex-shrink: 0;
	gap: 10px;
	align-items: center;
}

.list__img-block {
	flex-shrink: 0;
}

.list__images {}

.list__text-block {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 5px;
}

.list__title {
	font-size: 24px;
	font-weight: 700;
	color: #fff;
}

.list__subtitle {
	font-size: 15px;
	color: #fff;
}

/* Footer */

.footer {}

.footer__container {}

.footer__flex {
	display: flex;
	justify-content: space-between;
	padding: 20px 0;
}

.footer__left,
.footer__right {
	font-size: 16px;
}

